--- a/master/resource/view/index.html
+++ b/master/resource/view/index.html
@@ -12,7 +12,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="page-header">
-                    <h1>任务管理</h1>
+                    <h1>Job Manage</h1>
                 </div>
             </div>
         </div>
