任务Job增加标识属性

--- a/master/resource/view/index.html
+++ b/master/resource/view/index.html
@@ -30,6 +30,7 @@
                                 <tr>
                                     <th>任务编号</th>
                                     <th>任务名称</th>
+                                    <th>任务标识</th>
                                     <th>任务类型</th>
                                     <th>任务命令</th>
                                     <th>任务周期</th>
@@ -60,6 +61,10 @@
                         <div class="form-group">
                             <label for="edit-name">任务名称</label>
                             <input type="text" class="form-control" id="edit-name" placeholder="job number">
+                        </div>
+                        <div class="form-group">
+                            <label for="edit-ident">任务标识</label>
+                            <input type="text" disabled class="form-control" id="edit-ident" placeholder="job ident">
                         </div>
                         <div class="form-group">
                             <label for="edit-type">任务类型</label>
